--- a/Slider.html
+++ b/Slider.html
@@ -49,12 +49,12 @@ body {
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("https://images.unsplash.com/photo-1700393289642-0b9b7f3c6aea?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("https://images.unsplash.com/photo-1701226362234-548d955a1bb9?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
     center top/cover;
 }
 
