--- a/Slider.html
+++ b/Slider.html
@@ -44,7 +44,7 @@ body {
 
 
 .slide:first-child {
-  background: url("https://images.unsplash.com/photo-1700317440744-a126fc87b900?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
+  background: url("https://drive.google.com/file/d/139dZBRNB50ZMU8haMcd5iboZuecWjLx_/view?usp=sharing") no-repeat
     center top/cover;
 }
 
