--- a/Slider.html
+++ b/Slider.html
@@ -44,7 +44,7 @@ body {
 
 
 .slide:first-child {
-  background: url("https://drive.google.com/file/d/139dZBRNB50ZMU8haMcd5iboZuecWjLx_/view?usp=sharing") no-repeat
+  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/6998e683-136f-4915-9cbb-216e95b46644/Untitled-1.png?id=61e88446-9608-41c1-8e20-872f312bdb30&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=QBapdgFc9emt-P733tQbhlJ75cskETJWYPp4mhTbIRQ&downloadName=Untitled-1.png") no-repeat
     center top/cover;
 }
 
