--- a/Slider.html
+++ b/Slider.html
@@ -49,13 +49,33 @@ body {
 }
 
 .slide:nth-child(2) {
-  background: url("https://images.unsplash.com/photo-1700393289642-0b9b7f3c6aea?q=80&w=1528&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
+  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/45e51b0a-9763-4495-b1ce-08844068fbc6/Untitled-2.png?id=97db4ac9-6578-40f8-99cb-df3fd7003c21&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=YBlEQT1bT-drCntZBSzyGuV1TtpRIDpXfFyp-XR7O9Y&downloadName=Untitled-2.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("https://images.unsplash.com/photo-1701226362234-548d955a1bb9?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
+  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/2386232a-d7f0-4abb-87f1-bc4e049c66d3/Untitled-3.png?id=02132924-8d08-4cb7-84f6-ada81db4c4a8&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=_dZ-OsZi6bD-1wIjYe0jIfmSkKoJf2YYKfKJjyarl08&downloadName=Untitled-3.png") no-repeat
     center top/cover;
+}
+
+.slide:nth-child(4) {
+  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/5ac4a838-6930-453f-95ef-013cc75aed7f/Untitled-4.png?id=521c8f35-7f0f-401d-b562-0cde41ef7139&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=xKhM8B3isDJtpTXCNyJ5WDOWZnsACzDZLeLgndHIE9I&downloadName=Untitled-4.png") no-repeat center top/cover;
+}
+
+.slide:nth-child(5) {
+  background: url("5.png") no-repeat center top/cover;
+}
+
+.slide:nth-child(6) {
+  background: url("6.png") no-repeat center top/cover;
+}
+
+.slide:nth-child(7) {
+  background: url("7.png") no-repeat center top/cover;
+}
+
+.slide:nth-child(8) {
+  background: url("8.png") no-repeat center top/cover;
 }
 
 
@@ -110,6 +130,11 @@ body {
   <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
 
