--- a/Slider.html
+++ b/Slider.html
@@ -36,6 +36,9 @@ body {
   height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .slide.current {
