--- a/Slider.html
+++ b/Slider.html
@@ -47,7 +47,7 @@ body {
 
 
 .slide:first-child {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/6998e683-136f-4915-9cbb-216e95b46644/Untitled-1.png?id=61e88446-9608-41c1-8e20-872f312bdb30&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=QBapdgFc9emt-P733tQbhlJ75cskETJWYPp4mhTbIRQ&downloadName=Untitled-1.png") no-repeat
+  background: url("https://images.unsplash.com/photo-1683009427692-8a28348b0965?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
     center top/cover;
 }
 
