--- a/Slider.html
+++ b/Slider.html
@@ -47,7 +47,7 @@ body {
 
 
 .slide:first-child {
-  background: url("https://images.unsplash.com/photo-1683009427692-8a28348b0965?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat
+  background: url("https://okashah99.github.io/notion/Untitled-1.png") no-repeat
     center top/cover;
 }
 
