--- a/Slider.html
+++ b/Slider.html
@@ -52,33 +52,33 @@ body {
 }
 
 .slide:nth-child(2) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/45e51b0a-9763-4495-b1ce-08844068fbc6/Untitled-2.png?id=97db4ac9-6578-40f8-99cb-df3fd7003c21&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=YBlEQT1bT-drCntZBSzyGuV1TtpRIDpXfFyp-XR7O9Y&downloadName=Untitled-2.png") no-repeat
+  background: url("https://okashah99.github.io/notion/Untitled-2.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/2386232a-d7f0-4abb-87f1-bc4e049c66d3/Untitled-3.png?id=02132924-8d08-4cb7-84f6-ada81db4c4a8&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=_dZ-OsZi6bD-1wIjYe0jIfmSkKoJf2YYKfKJjyarl08&downloadName=Untitled-3.png") no-repeat
+  background: url("https://okashah99.github.io/notion/Untitled-3.png") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(4) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/5ac4a838-6930-453f-95ef-013cc75aed7f/Untitled-4.png?id=521c8f35-7f0f-401d-b562-0cde41ef7139&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=xKhM8B3isDJtpTXCNyJ5WDOWZnsACzDZLeLgndHIE9I&downloadName=Untitled-4.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-4.png") no-repeat center top/cover;
 }
 
 .slide:nth-child(5) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/a1f72219-3038-4077-89d2-97f3bb4e93e8/Untitled-5.png?id=7b6aabbb-6ad2-44ed-9002-c63a2ba60786&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=z_SQI7yUz8Zf3WH-6LUOQrBOnkfECKOSSGlVKAe7fU0&downloadName=Untitled-5.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-5.png") no-repeat center top/cover;
 }
 
 .slide:nth-child(6) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/5f2a964d-4e28-45bc-82a7-63fc4d972694/Untitled-6.png?id=247f5f03-32f2-4dcc-8a0e-ad9923c6074c&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=wm2dSSHIBKSBq5SmTkK4m2c_bJrGZbCY39tg2FWbJRY&downloadName=Untitled-6.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-6.png") no-repeat center top/cover;
 }
 
 .slide:nth-child(7) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/7c10ca1e-e513-4f0b-8b29-20e209fa85e1/Untitled-7.png?id=646b04e4-3ff3-4b3b-b6e7-e70da204a06a&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=4O-L2VXImtPv-Mmis57HV_T63-ULH0b6U9wc6VHPgrk&downloadName=Untitled-7.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-7.png.png") no-repeat center top/cover;
 }
 
 .slide:nth-child(8) {
-  background: url("https://file.notion.so/f/f/96f7e9ca-7633-4d19-8cf4-2e274e7ebceb/94e920ab-7cea-4567-b612-99c3b449b946/Untitled-8.png?id=4cc64d86-07c5-47c5-8311-f7b952cb0c45&table=block&spaceId=96f7e9ca-7633-4d19-8cf4-2e274e7ebceb&expirationTimestamp=1701367200000&signature=IeRG1qZNcHkzUJYeVGJUVb63BUVgosiQJwszHJxcvnM&downloadName=Untitled-8.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-8.png") no-repeat center top/cover;
 }
 
 
