--- a/Slider.html
+++ b/Slider.html
@@ -74,7 +74,7 @@ body {
 }
 
 .slide:nth-child(7) {
-  background: url("https://okashah99.github.io/notion/Untitled-7.png.png") no-repeat center top/cover;
+  background: url("https://okashah99.github.io/notion/Untitled-7.png") no-repeat center top/cover;
 }
 
 .slide:nth-child(8) {
